# hdl_localization_AutoInitialize

./: README.md
scancontext_init_localizer/: CMakeLists.txt  package.xml
scancontext_init_localizer/config/: sc_builder.yaml  sc_initializer.yaml
scancontext_init_localizer/include/scancontext_init_localizer/: scan_context.hpp
scancontext_init_localizer/launch/: sc_map_builder.launch  sc_ndt_initializer.launch
scancontext_init_localizer/src/: sc_map_builder_node.cpp  sc_ndt_initializer_node.cpp  scan_context.cpp
scancontext_init_localizer/srv/: EstimateInitialPose.srv
